Adding links, security and some package informations

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dist": "electron-builder"
   },
   "author": "Jyben",
-  "license": "ISC",
+  "license": "creativecommons",
+  "email": "benjamin.letessier@gmail.com",
   "devDependencies": {
     "electron-builder": "^20.43.0",
     "axios": "^0.18.1",
