--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "csgo-mm-server-picker-2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Server picker for CS:GO matchmaking",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -9,12 +9,9 @@
     "dist": "electron-builder"
   },
   "author": "Jyben <benjamin.letessier@gmail.com>",
-  "license": "creativecommons",
+  "license": "CC-BY-NC-ND-4.0",
   "devDependencies": {
     "electron-builder": "^20.43.0",
-    "axios": "^0.18.1",
-    "ping-lite": "^2.0.2",
-    "sudo-prompt": "^8.2.5",
     "electron": "^5.0.3"
   },
   "dependencies": {
