--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "csgo-mm-server-picker-2",
+  "name": "csgo-mm-server-picker",
   "version": "v1.0.2",
   "description": "Server picker for CS:GO matchmaking",
   "main": "main.js",
