--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "url": "https://github.com/Jyben/csgo-mm-server-picker.git"
   },
   "devDependencies": {
-    "electron-builder": "^20.43.0",
-    "electron": "^5.0.3"
+    "electron": "^5.0.13",
+    "electron-builder": "^20.44.4"
   },
   "dependencies": {
     "axios": "^0.18.1",
     "electron-log": "^3.0.6",
-    "electron-updater": "^4.0.6",
+    "electron-updater": "^4.2.2",
     "glob": "^7.1.4",
     "simple-node-logger": "^18.12.24",
     "sudo-prompt": "^8.2.5"
